--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "element-ui": "^2.15.5",
     "less": "^4.1.1",
+    "markdown-it": "^12.2.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
